--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 winapi = { version = "0.3.9", features = ["libloaderapi","consoleapi", "wincon", 
     "minwindef","winnt", "memoryapi", "sysinfoapi", "processthreadsapi","memoryapi", "vcruntime",
-    "synchapi", "winbase"] }
+    "synchapi", "winbase", "tlhelp32"] }
 ntapi = "0.3.4"
 field-offset = "0.3.4"
